sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:12: error: not found: value swapped2
      swapped2 = true
      ^AlgCocktailSort3:21: error: not found: value swapped2
      swapped2 = true
      ^